--- a/Projeto Alta Fidelidade Javascript/index.html
+++ b/Projeto Alta Fidelidade Javascript/index.html
@@ -5,25 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Projeto Alta Fidelidade</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
 
 <body>
-    <div class=""> 
-        <ul>
-            <li>1 Shopping Cart</li>
-            <li>2 Shipping info</li>
-            <li>3 Payment Method</li>
+    <div class="header"> 
+        <ul class="header_links">
+            <li id="active"><a href=""> 1 Shopping Cart </a></li>
+            <li><a href=""> 2 Shipping info </a></li>
+            <li><a href=""> 3 Payment Method </a></li>
         </ul>
     </div>   
     
-    <div>
+    <div class="items_order">
         <p>You have 3 items in your order</p>
     </div>
 
     <table>
-        <tr>
+        <tr class="table_title">
             <td></td>
             <td></td>
             <td>Name</td>
@@ -32,7 +32,7 @@
             <td>Total</td>
         </tr>
 
-        <tr>
+        <tr class="table_">
             <td><i class="fa fa-times-circle-o" aria-hidden="true"></i></td>
             <td><img src="img/Puma_Tee.jpg"></td>
             <td>Puma Golf Ragian Tech Polo Tee</td>
@@ -95,5 +95,7 @@
     <div>
         <a href="">Shopping infoo</a>
     </div>
+
+    <script src="carrinho.js"></script>
 </body>
 </html>
