--- a/Projeto Alta Fidelidade Javascript/index.html
+++ b/Projeto Alta Fidelidade Javascript/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Projeto Alta Fidelidade</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
 
@@ -24,27 +24,27 @@
                     <span class="title__cart">Total</span>
                 </div>
                
-            <div id="products">
-                <div class="product">
-                    <i class="fa fa-times-circle"></i>
-                    <img src="img/Puma_Tee.jpg" alt="t-shirt" class="product__img">
-                    <span id="p1" class="product__name"></span>
-                    <span id="c1" class="product__color"></span>
-                    <span id="s1" class="product__size"></span>
-                    <span id="v1" class="product__value"></span>*<input type="number" name="" id="">
-                </div>
-                
-            </div>
+            <div id="products"></div>
 
             <div>
-                <span> Subtotal: R$523</span>
+                <span id="total-geral"></span>
                 <span><i></i> Continue Shopping</span>
                 <button type="submit">Shipping Info</button>
             </div>
             <div class="clear"></div>
         </section>
     </main>
-    <script src="js/carrinho.js"></script>
+    <script src="carrinho.js"></script>
     </body>
 </html>
 
+<!--
+<div class="product">
+        <i class="fa fa-times-circle"></i>
+        <img src="img/Puma_Tee.jpg" alt="t-shirt" class="product__img">
+        <span id="p1" class="product__name"></span>
+        <span id="c1" class="product__color"></span>
+        <span id="s1" class="product__size"></span>
+        <span id="v1" class="product__value"></span>*<input type="number" name="" id="">
+    </div>
+-->
