--- a/Projeto jsnotes/index.html
+++ b/Projeto jsnotes/index.html
@@ -9,6 +9,23 @@
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
 <body>
+
+    <form class="formulario" action="" method="">
+        <div class="form_body">
+            <p>Cadastro de Notas</p> <br>
+            <label>Título <br>
+                <input type="text" name="titulo" /> 
+            </label>
+                
+            <div class="form_itens">
+                <p>Itens</p>
+                <i class="fa fa-plus-square-o" aria-hidden="true"></i>
+                <button type="submit">Cadastrar s/ DOM </button>
+                <button type="submit">Limpar </button>
+                <button type="submit">Cadastrar c/ DOM </button>
+            </div>
+        </div>
+    </form>
     
 </body>
 </html>
