atualização carrinho.js e criação do form

--- a/Projeto Alta Fidelidade Javascript/index.html
+++ b/Projeto Alta Fidelidade Javascript/index.html
@@ -27,7 +27,7 @@
             <div id="products"></div>
 
             <div>
-                <span id="total-geral"></span>
+                Subtotal: <strong>R$ <span id="total-geral"></span></strong>
                 <span><i></i> Continue Shopping</span>
                 <button type="submit">Shipping Info</button>
             </div>
