--- a/Projeto jsnotes/index.html
+++ b/Projeto jsnotes/index.html
@@ -9,23 +9,24 @@
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
 <body>
-
-    <form class="formulario" action="" method="">
-        <div class="form_body">
-            <p>Cadastro de Notas</p> <br>
-            <label>Título <br>
-                <input type="text" name="titulo" /> 
-            </label>
-                
-            <div class="form_itens">
-                <p>Itens</p>
-                <i class="fa fa-plus-square-o" aria-hidden="true"></i>
-                <button type="submit">Cadastrar s/ DOM </button>
-                <button type="submit">Limpar </button>
-                <button type="submit">Cadastrar c/ DOM </button>
+    <div class="main">
+        <form class="formulario" action="" method="">
+            <div class="form_body">
+                <p>Cadastro de Notas</p> <br>
+                <label>Título <br>
+                    <input type="text" name="titulo" /> 
+                </label>
+                <br>    
+                <div class="form_itens">
+                    <p>Itens</p>
+                    <i class="fa fa-plus-square-o" aria-hidden="true"></i><br><br>
+                    <button class="form_button" type="submit">Cadastrar s/ DOM </button>
+                    <button class="form_button" type="submit">Limpar </button><br>
+                    <button class="form_button" type="submit">Cadastrar c/ DOM </button>
+                </div>
             </div>
-        </div>
-    </form>
+        </form>
+    </div>
     
 </body>
 </html>
